# repo-bin1

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  notify-packager.yml
src/: bin_info.h  binary_info.h  main.cpp  version.h.in
tests/: test_main.cpp
